samples/_failures_safe/1761097776_89dab3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d93dead.c: In function ‘main’:
./samples/SAFE/__tmp_2d93dead.c:135:15: error: expected ‘;’ at end of input
  135 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_2d93dead.c:135:9: error: expected declaration or statement at end of input
  135 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_2d93dead.c:135:9: error: expected declaration or statement at end of input
